HA_Kubernetes/rancher_playbooks/files/kubernetes_manifests/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: defaultbackend
  namespace: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "prod-acme-cloudflare-issuer"

spec:
  tls:
  - hosts:
    - test.dev.ryezone.com
    secretName: quickstart-example-tls
  rules:
  - host: test.dev.ryezone.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ingress-nginx-defaultbackend
            port:
              number: 80
